--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-utils": "^1.2.21",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
